El chooser que se cierra y selecciona .exe y los paneles con un arbol y una imagen

--- a/VCellId_v1/src/vcellid_v1/resources/VCellId_v1View.properties
+++ b/VCellId_v1/src/vcellid_v1/resources/VCellId_v1View.properties
@@ -38,3 +38,11 @@ imagesSetupMenuItem.text=Images Setup
 segmentationMenuItem.text=Segmentation
 selectCellIdPath.Action.text=
 selectCellIdPath.Action.shortDescription=Select Path for CellId application
+jButton1.text=Load Images
+jButton2.text=Images Setup
+jButton3.text=Segmentation
+treePanel.border.title=Images
+imagePanel.border.title=Image
+appTitleLabel.text=
+#NOI18N
+appTitleLabel.icon=splash.png
