--- a/VCellId_v1/src/vcellid_v1/resources/VCellId_v1AboutBox.properties
+++ b/VCellId_v1/src/vcellid_v1/resources/VCellId_v1AboutBox.properties
@@ -2,7 +2,7 @@ title = About: ${Application.title} ${Application.version}
 
 closeAboutBox.Action.text = &Close
 
-appDescLabel.text=<html>${Application.description}
+appDescLabel.text=Graphic User interface for Cell Id
 
 versionLabel.text=Product Version\:
 
