--- a/VCellId_v1/src/vcellid_v1/resources/VCellId_v1App.properties
+++ b/VCellId_v1/src/vcellid_v1/resources/VCellId_v1App.properties
@@ -1,10 +1,10 @@
 # Application global resources
 
 Application.name = VCellId_v1
-Application.title = Basic Application Example
+Application.title = V Cell Id GUI
 Application.version = 1.0
-Application.vendor = Sun Microsystems Inc.
-Application.homepage = http\://appframework.dev.java.net/
+Application.vendor = ITBA
+Application.homepage = none
 Application.description = A simple Java desktop application based on Swing Application Framework.
 Application.vendorId = Sun
 Application.id = ${Application.name}
