--- a/VCellId_v1/src/vcellid_v1/resources/VCellId_v1View.properties
+++ b/VCellId_v1/src/vcellid_v1/resources/VCellId_v1View.properties
@@ -46,3 +46,7 @@ imagePanel.border.title=Image
 appTitleLabel.text=
 #NOI18N
 appTitleLabel.icon=splash.png
+showImageSetup.Action.text=
+showImageSetup.Action.shortDescription=
+showSegmentationSetup.Action.text=
+showSegmentationSetup.Action.shortDescription=
